refactored storage builder

--- a/php/composer.json
+++ b/php/composer.json
@@ -6,7 +6,8 @@
     "type": "library",
     "require": {
         "php": ">=7.3",
-        "endclothing/prometheus_client_php": "^1.0"
+        "endclothing/prometheus_client_php": "^1.0",
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
