--- a/php/composer.json
+++ b/php/composer.json
@@ -1,17 +1,13 @@
 {
     "name": "demidovich/php-metric",
-    "description": "Prometheus metrics wrapper for PHP applications.",
-    "keywords": ["php", "metric"],
-    "license": "Apache-2.0",
+    "license": "MIT",
     "type": "library",
-    "require": {
-        "php": ">=7.3",
-        "endclothing/prometheus_client_php": "^1.0",
-        "psr/log": "^1.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.0"
-    },
+    "description": "Prometheus metrics wrapper for the framework agnostic PHP applications.",
+    "keywords": [
+        "php", 
+        "metric", 
+        "prometheus"
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -23,6 +19,14 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "stable",
+    "require": {
+        "php": ">=7.3",
+        "endclothing/prometheus_client_php": "^1.0",
+        "psr/log": "^1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
+    },
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
