--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,10 @@ Thumbs.db
 /nbproject
 Homestead.json
 Homestead.yaml
-/docker-compose.yml
 
+/vendor
+/coverage
 .env
-.makeenv
-var/*
+composer.lock
+phpunit.xml
+.phpunit.result.cache
