--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "description": "Prometheus metrics wrapper for the framework agnostic PHP applications.",
     "keywords": [
-        "php", 
-        "metric", 
+        "php",
+        "metric",
         "prometheus"
     ],
     "autoload": {
@@ -25,7 +25,7 @@
         "psr/log": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": ">=8.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
