--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Metric\\": "src/Metric"
+            "Metrics\\": "src/Metrics"
         }
     },
     "autoload-dev": {
