--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
     bootstrap="tests/bootstrap.php"
 >
     <testsuites>
-        <testsuite name="PHP Metric Test Suite">
+        <testsuite name="PHP Metrics Test Suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
