--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "psr/log": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=8.0"
+        "phpunit/phpunit": ">=8.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
