added acpu extension to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+sudo: false
+
 language: php
+
 php:
   - 7.3
-  - 7.4
 
 before_install:
   - sudo pip install codecov
@@ -10,6 +12,7 @@ services:
   - redis-server
 
 before_script:
+  - echo yes | pecl install apcu
   - echo "apc.enabled = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - echo "apc.enable_cli = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - echo "extension = apcu.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
