--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ./:/app
     links:
       - redis
+    environment:
+      - REDIS_HOST=redis
     networks:
       - "docker_network"
 
