--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "demidovich/php-metrics",
     "license": "MIT",
     "type": "library",
-    "description": "Prometheus metrics wrapper for the framework agnostic PHP applications.",
+    "description": "Framework agnostic simple library for monitoring PHP application in the Prometheus.",
     "keywords": [
         "php",
         "metric",
