added composer/auth.json volume to the docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     container_name: "php-metrics-php"
     volumes:
       - ./:/app
+      - ~/.composer/auth.json:/composer/auth.json
     links:
       - redis
     environment:
