--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     },
     "require": {
         "php": ">=7.3",
-        "endclothing/prometheus_client_php": "^1.0.2",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "promphp/prometheus_client_php": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=8.0",
