--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         }
     },
     "require": {
-        "php": ">=7.3",
-        "psr/log": "^1.1",
-        "promphp/prometheus_client_php": "^2.3"
+        "php": ">=8.1",
+        "psr/log": "^2.0 || ^3.0",
+        "promphp/prometheus_client_php": ">=2.6.2"
     },
     "require-dev": {
         "phpunit/phpunit": ">=8.0",
